# robomaster_cv_python

./: .gitignore  .gitmodules  .main.py.swp  .opencv_viewer_example.py.swp  Lidar Max Debrief.md  Max Questions.md  Model.py  README.md  SettingUp_Repo.md  ShouldNotBeHere  Stories.md  Target_Selection.py  bounding_box.py  bridge.py  configure.sh  demo.py  dot.gitignore  error.txt  inceptionresnetv2-520b38e4.pth  main.py  object_detection.py  opencv_viewer_example.py  requirements.txt  river.service  startUp.service  test.ipynb  test.py  testingFrames.py  train_test_split.py  yoloTest.py  yolov5_model.ipynb
Abc/: test.py  test2.py
DeblurGANv2/: .gitignore  LICENSE  README.md  adversarial_trainer.py  aug.py  dataset.py  metric_counter.py  picture_to_video.py  predict.py  requirements.txt  schedulers.py  test.py  test.sh  test_aug.py  test_batchsize.py  test_dataset.py  test_metrics.py  train.py
ML/: Model.py  __init__.py
VEXU_GHOST/: .gitmodules  Dockerfile  README.md  lidar-max-debrief.md  world.md
VEXU_GHOST/sentry_mecanum/: CMakeLists.txt  package.xml
VEXU_GHOST/sentry_mecanum/include/: mecanum_plugin.hpp
VEXU_GHOST/sentry_mecanum/include/sentry_mecanum/: mecanum.hpp
VEXU_GHOST/sentry_mecanum/src/: mecanum.cpp  mecanum_plugin.cpp
armor_plates_dataset/: README.dataset.txt  README.roboflow.txt  data.yaml
bounding_box/: __init__.py  bounding_box.py
communication/: UART Design.txt  __init__.py  beaglebone.md  communication.py
data/: README.md
depth_calculation/: __init__.py  depth_calculation.py  depth_github.md  depth_unit_tests.py  example.py  (+2 more)
(+3554 files in other folders)
